--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,4 @@
 language: cpp
-sudo: required
-
-env:
-  global:
-   # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
-   #   via the "travis encrypt" command using the project repo's public key
-   - secure: "DLL0tdzjGvRUph12w8Biew"
-before_install:
-      - echo -n | openssl s_client -connect scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
-      - git config user.email "travis@build.bot" && git config user.name "Travis CI"
-      - git tag -a -m "Travis build" init
 
 addons:
   coverity_scan:
@@ -17,6 +6,6 @@ addons:
       name: "DCT"
       description: "Developers Compression Tool"
     notification_email: scott@twedev.com
-    build_command_prepend: "./configure; make clean"
+    build_command_prepend: "./configure; make && make test"
     build_command:   "make -j 4"
     branch_pattern: coverity_scan
